option('list-users', type: 'feature', description: 'Build list-users')
option('coroutine-example', type: 'feature', description: 'Build coroutine-example')

option('asio-example', type: 'feature', description: 'Build asio-example')
option('register-property', type: 'feature', description: 'Build register-property')
option('get-all-properties', type: 'feature', description: 'Build get-all-properties')

option('calculator', type: 'feature', description: 'Build calculator')

# sample command with options:
#rm -rf build && meson setup build -Dlist-users=disabled -Dcoroutine-example=disabled -Dasio-example=disabled -Dregister-property=disabled -Dget-all-properties=disabled
