option('simple-dbuscall', type: 'feature', description: 'Build simple-dbuscall', value : 'enabled')

option('list-users', type: 'feature', description: 'Build list-users', value : 'enabled')

option('coroutine-example', type: 'feature', description: 'Build coroutine-example', value : 'enabled')

option('asio-example', type: 'feature', description: 'Build asio-example', value : 'enabled')

option('register-property', type: 'feature', description: 'Build register-property', value : 'enabled')

option('get-all-properties', type: 'feature', description: 'Build get-all-properties', value : 'enabled')

option('calculator', type: 'feature', description: 'Build calculator', value : 'enabled')

# sample command with options:
#rm -rf build && meson setup build -Dcalculator=disabled -Dasio-example=disabled
